2006-03-19  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in: Regenerated.

2004-05-31  Conrad T. Pino  <Conrad@Pino.com>

	* libdiff.dsp: Add "../lib/timespec.h" and "../windows-NT/woe32.h".

2004-05-26  Conrad T. Pino  <Conrad@Pino.com>

	* diff.c: Include "../lib/error.h" so "error" function has prototype.

2004-05-24  Conrad T. Pino  <Conrad@Pino.com>

	* libdiff.dep: Regenerated for ../cvsnt.dsp changes.

2005-05-09  Conrad T. Pino  <Conrad@Pino.com>

	* libdiff.mak: Regenerated after Windows full rebuild.

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.in: Regenerated.

2004-12-14  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add .cvsignore.

2004-11-30  Conrad T. Pino  <Conrad@Pino.com>

	* libdiff.mak: Regenerated for "../cvsnt.dsp" change.

2004-11-05  Conrad T. Pino  <Conrad@Pino.com>

	* libdiff.dep: Regenerated for "../lib/libcvs.dsp" change.

2004-11-04  Conrad T. Pino  <Conrad@Pino.com>

	* libdiff.dep: Regenerated for "../lib/libcvs.dsp" change.

2004-11-01  Conrad T. Pino  <Conrad@Pino.com>

	* libdiff.dep: Regenerated for "../lib/libcvs.dsp" change.

2004-10-26  Conrad T. Pino  <Conrad@Pino.com>

	* libdiff.dep: Regenerate for "../cvsnt.dsp" and "../lib/libcvs.dsp" change.

2004-10-21  Conrad T. Pino  <Conrad@Pino.com>

	* libdiff.dep: Regenerated for "../zlib/libz.dsp" change.
	* libdiff.mak: Regenerated for "../zlib/libz.dsp" change.

2004-10-20  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.in: Regenerate for new configure.in.

2004-10-09  Mark D. Baushke  <mdb@cvshome.org>

	* diff.c, diff3.c: Backout last change.
	* Makefile.am: Add -I$(top_builddir)/lib to find getopt.h
	* Makefile.in: Regenerated.

2004-10-09  Mark D. Baushke  <mdb@cvshome.org>

	* diff.c: Add support for systems that do not #include <stio.h>
	* diff3.c: Ditto.

2004-10-07  Conrad T. Pino  <Conrad@Pino.com>

	* libdiff.dep: Regenerate for "../lib/libcvs.dsp" changes made 2004-10-07.

2004-10-05  Conrad T. Pino  <Conrad@Pino.com>
