@@ -1,3 +1,8 @@
+2006-07-07  Derek Price  <derek@ximbiot.com>
+
+	* system.h [!HAVE_DIRENT_H && HAVE_NDIR_H]: Ignore this obsolescent
+	case.
+
 2006-07-06  Derek Price  <derek@ximbiot.com>
 
 	* fnmatch.c, fnmatch_loop.c, getcwd.c, getdate.c, getdate.y, getopt.c,
