@@ -1,3 +1,8 @@
+2006-07-07  Derek Price  <derek@ximbiot.com>
+
+	* system.h [!HAVE_DIRENT_H && HAVE_NDIR_H]: Ignore this obsolescent
+	case.
+
 2006-03-19  Mark D. Baushke  <mdb@gnu.org>
 
 	* Makefile.in: Regenerated.
